--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.35.0",
+    "@tailwindcss/postcss": "^4.1.14",
+    "framer-motion": "^12.23.23",
+    "nanoid": "^5.1.6",
+    "nanoid-dictionary": "^5.0.0",
+    "next": "15.5.4",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-plock": "^3.6.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
