--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^12.23.23",
     "nanoid": "^5.1.6",
     "nanoid-dictionary": "^5.0.0",
-    "next": "15.5.4",
+    "next": "15.5.12",
+    "nuqs": "^2.8.8",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
